--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,12 @@ flutter:
   assets:
     - images/sumesh.jpg
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
+    - family: Source Sans Pro
+      fonts:
+        - asset: fonts/SourceSansPro-Regular.ttf
 
 
